--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <body>
-     hello world
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+</head>
+<body>
+    <h1>Welcome to Esey Code</h1>
+    <p>เว็ปไซต์สำหรับผู้เริ่มต้นในการเขียนโปรแกรม</p>
+    <p>สอนในระดับพื้นฐานเท่านั้น</p>
+    <p>Python</p>
+</body>
 </html>
