--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        .navbar {
+            background-color: #333;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
@@ -20,16 +29,22 @@
     <p>เว็ปไซต์สำหรับผู้เริ่มต้นในการเขียนโปรแกรม</p>
     <p>สอนในระดับพื้นฐานเท่านั้น</p>
     <p>Python</p>
-
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
-    <h1>Appleh </h1>
+    
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
+    <h1>a</h1>
 </body>
 </html>
