--- a/templates/index.html
+++ b/templates/index.html
@@ -15,36 +15,17 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <div class="logo">🐍</div>
-        <div>
-            <a href="#">หน้าแรก</a>
-            <a href="#">บทเรียน</a>
-            <a href="#">เข้าสู่ระบบ</a>
-            <a href="#">สมัครสมาชิก</a>
+        <div class="navbar">
+            <div class="logo">🐍 Python Course</div>
+            <div>
+                <a href="#">หน้าแรก</a>
+                <a href="#">บทเรียน</a>    
+                <a href="#">เข้าสู่ระบบ</a>
+                <a href="#">สมัครสมาชิก</a>
+            </div>
         </div>
-    </div>
-
-    <h1>Welcome to Esey Code</h1>
-    <p>เว็ปไซต์สำหรับผู้เริ่มต้นในการเขียนโปรแกรม</p>
-    <p>สอนในระดับพื้นฐานเท่านั้น</p>
-    <p>Python</p>
+        <h1>ยินดีต้อนรับสู่คอร์สเรียน Python</h1>
+        <p>เรียนรู้ Python ในนะดับพื้นฐาน</p>
     
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
-    <h1>a</h1>
 </body>
 </html>
