--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,16 @@
     <title>Home</title>
 </head>
 <body>
-    Easy Python
-    dashboard
-    login
-    signup
+    <nav>
+        <div class="logo">
+            <a href="home.html">Easy Python</a>
+        </div>
+        <div class="menu">
+            <a href="dashboard.html">dashboard</a>
+            <a href="login.html">login</a>
+            <a href="register.html">signup</a>
+        </div>
+    </nav>
     <h1>ยินดีต้อนรับสู่โลกของ Python</h1>
     <p>ภาษาที่นักพัฒนา นักวิทยาศาสตร์ข้อมูล และวิศวกร AI ทั่วโลกเลือกใช้!
         ไม่ว่าคุณจะเป็นมือใหม่ที่อยากเริ่มต้นเขียนโค้ด 
