--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div id="topbar_home"></div>
-    <script>
-        fetch("top_bar.html")
-            .then(response => response.text())
-            .then(data => {document.getElementById("topbar_home").innerHTML = data})
-    </script>
+    {% include 'topbar.html' %}
     <h1>ยินดีต้อนรับสู่โลกของ Python</h1>
     <p>ภาษาที่นักพัฒนา นักวิทยาศาสตร์ข้อมูล และวิศวกร AI ทั่วโลกเลือกใช้!
         ไม่ว่าคุณจะเป็นมือใหม่ที่อยากเริ่มต้นเขียนโค้ด 
