add page python

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,12 +8,7 @@
 <body>
     {% include 'topbar.html' %}
     start <br>
-    python1 <br>
-    python2 <br>
-    python3 <br>
-    python4 <br>
-    python5 <br>
-    python6 <br>
+    <a href="/python1">python1</a>
     end
 </body>
 </html>
