--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,6 @@
         มาร่วมเรียนรู้กับเราวันนี้ แล้วค้นพบว่าการเขียนโปรแกรมสามารถเปลี่ยนอนาคตของคุณได้ 
         เริ่มต้นเส้นทางการเขียนโค้ดของคุณเลยตอนนี้!
     </p>
-    start learning
+    <a href="/dashboard">start learning</a>
 </body>
 </html>
