python page other

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,6 +9,11 @@
     {% include 'topbar.html' %}
     start <br>
     <a href="/python1">python1</a>
+    <a href="/python2">python2</a>
+    <a href="/python3">python3</a>
+    <a href="/python4">python4</a>
+    <a href="/python5">python5</a>
+    <a href="/python6">python6</a>
     end
 </body>
 </html>
