--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dashboard</title>
 </head>
 <body>
     {% include 'topbar.html' %}
     start <br>
-    <a href="/python1">python1</a>
-    <a href="/python2">python2</a>
-    <a href="/python3">python3</a>
-    <a href="/python4">python4</a>
-    <a href="/python5">python5</a>
+    <a href="/python1">python1</a><br>
+    <a href="/python2">python2</a><br>
+    <a href="/python3">python3</a><br>
+    <a href="/python4">python4</a><br>
+    <a href="/python5">python5</a><br>
     <a href="/python6">python6</a>
     end
 </body>
