--- a/templates/learn/python1.html
+++ b/templates/learn/python1.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python 1</title>
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.27.2/full/pyodide.js"></script>
 </head>
 <body>
     {% include 'topbar.html' %}
     test
+    {% include 'editor.html' %}
 </body>
 </html>
