--- a/templates/editor.html
+++ b/templates/editor.html
@@ -9,15 +9,13 @@
 
 <script>
     async function main() {
-            console.log("Loading Pyodide...");
+            // console.log("Loading Pyodide...");
             window.pyodide = await loadPyodide();
-            console.log("Pyodide Loaded");
+            // console.log("Pyodide Loaded");
         }
-
         async function runPython() {
             const code = document.getElementById("codeEditor").value;
-            console.log("Running Python code:", code);
-
+            // console.log("Running Python code:", code);
             try {
                 const output = await pyodide.runPythonAsync(`
                     import sys
@@ -26,15 +24,13 @@
                     ${code}
                     sys.stdout.getvalue()
                 `);
-                console.log("Python Output:", output);
+                // console.log("Python Output:", output);
                 document.getElementById("output").textContent = output;
             } catch (err) {
                 console.error("Error:", err);
                 document.getElementById("output").textContent = "Error: " + err.message;
             }
         }
-
         document.getElementById("runButton").addEventListener("click", runPython);
-
         main();
 </script>
