--- a/templates/learn/python1.html
+++ b/templates/learn/python1.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     {% include 'topbar.html' %}
-    test
-    {% include 'editor.html' %}
+    <h1>บทที่ 1: ประเภทข้อมูล (Data Types) ใน Python</h1>
+
+    <h3>Python คืออะไร</h3>
+    <p>Python เป็นภาษาการเขียนโปรแกรมที่ได้รับความนิยมสูง 
+        เนื่องจากมีโครงสร้างที่อ่านง่าย ใช้งานง่าย 
+        และมีชุมชนที่ใหญ่ Python สามารถใช้สำหรับการพัฒนาเว็บ, วิเคราะห์ข้อมูล, ปัญญาประดิษฐ์ (AI), และการพัฒนาเกม เป็นต้น
+    </p>
+    <h3>ประเภทข้อมูล (Data Types) ใน Python</h3>
+    <p>Python มีประเภทข้อมูลหลักๆ ดังนี้</p>
+    <ul>
+        <li>int: จำนวนเต็ม เช่น 1, 2, 3</li>
+        <li>float: จำนวนทศนิยม เช่น 1.0, 2.5, 3.14</li>
+        <li>str: ข้อความ เช่น "สวัสดี ชาวโลก!"</li>
+        <li>bool: ค่าความจริง เช่น True, False</li>
+    <!-- {% include 'editor.html' %} -->
 </body>
 </html>
