--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,6 +1,6 @@
 <div id="editor">
-    <h1>Python Online Editor</h1>
-    <textarea id="codeEditor">print("สวัสดี ชาวโลก!")</textarea>
+    <!-- <h1>Python Online Editor</h1> -->
+    <textarea id="codeEditor"></textarea>
     <br>
     <button id="runButton">Run Code</button>
     <h2>Output:</h2>
