--- a/templates/learn/python1.html
+++ b/templates/learn/python1.html
@@ -17,6 +17,57 @@
     <p>"ตัวแปร" คือสิ่งที่ใช้เก็บค่าของข้อมูลชนิดต่างๆ นั่นเพราะเวลาที่เรามีข้อมูลก็จำเป็นต้องมีที่จัดเก็บข้อมูล ซึ่งที่จัดเก็บข้อมูลนั้นก็คือตัวแปรนั่นเอง
         ถ้าให้เปรียบเทียบก็อาจเทียบว่าตัวแปรหนึ่งตัวคือกล่องที่เก็บข้อมูลไว้</p>
     <h2>ชนิดของข้อมูล</h2>
-    
+    <p>ชนิดในตารางเป็นแค่ส่วนหนึ่งไม่ใช้ทั้งหมด</p>
+    <table>
+        <thead>
+            <tr>
+                <th>ชนิด</th>
+                <th>ตัวย่อใน python</th>
+                <th>คัวอย่าง</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>จำนวนเต็ม</td>
+                <td>int</td>
+                <td>123</td>
+            </tr>
+            <tr>
+                <td>จำนวนทศนิยม</td>
+                <td>float</td>
+                <td>12.3</td>
+            </tr>
+            <tr>
+                <td>ค่าความจริง</td>
+                <td>bool</td>
+                <td>False</td>
+            </tr>
+            <tr>
+                <td>ข้อความ</td>
+                <td>str</td>
+                <td>"Hello World"</td>
+            </tr>
+            <tr>
+                <td>ลิสต์</td>
+                <td>list</td>
+                <td>[1, 2, 3]</td>
+            </tr>
+            <tr>
+                <td>ทูเพิล</td>
+                <td>tuple</td>
+                <td>(1, 2, 3)</td>
+            </tr>
+            <tr>
+                <td>เซต</td>
+                <td>set</td>
+                <td>{1, 2, 3}</td>
+            </tr>
+            <tr>
+                <td>พจนานุกรม</td>
+                <td>dict</td>
+                <td>{"name": "A", "age": 25}</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
