--- a/templates/learn/python1.html
+++ b/templates/learn/python1.html
@@ -17,7 +17,7 @@
     <p>"ตัวแปร" คือสิ่งที่ใช้เก็บค่าของข้อมูลชนิดต่างๆ นั่นเพราะเวลาที่เรามีข้อมูลก็จำเป็นต้องมีที่จัดเก็บข้อมูล ซึ่งที่จัดเก็บข้อมูลนั้นก็คือตัวแปรนั่นเอง
         ถ้าให้เปรียบเทียบก็อาจเทียบว่าตัวแปรหนึ่งตัวคือกล่องที่เก็บข้อมูลไว้</p>
     <h2>ชนิดของข้อมูล</h2>
-    <p>ชนิดในตารางเป็นแค่ส่วนหนึ่งไม่ใช้ทั้งหมด</p>
+    <p>ในตารางเป็นแค่ส่วนหนึ่งไม่ใช้ทั้งหมด</p>
     <table>
         <thead>
             <tr>
@@ -69,5 +69,9 @@
             </tr>
         </tbody>
     </table>
+    <p>โดยในการเปลี่ยนชนิดข้อมูลใน python คือการใส่ตัวย่อหน้าข้อมูลแล้วใช้วงเล็บล้อมรอบข้อมูล เช่น int(1.23) = 1</p>
+    <p>ทดลอง เปลี่ยน 123 เป็น list โดยเก็บในตัวแปล แล้วใช้ print() ดู ผลลัพท์ที่ต้องการคือ [123]</p>
+    {% include 'editor.html' %}
+    <a href="/python2">ไปต่อยังบทเรียนต่อไป</a>
 </body>
 </html>
