--- a/templates/learn/python1.html
+++ b/templates/learn/python1.html
@@ -23,7 +23,7 @@
             <tr>
                 <th>ชนิด</th>
                 <th>ตัวย่อใน python</th>
-                <th>คัวอย่าง</th>
+                <th>ตัวอย่าง</th>
             </tr>
         </thead>
         <tbody>
