--- a/templates/home.html
+++ b/templates/home.html
@@ -8,22 +8,24 @@
 <body>
     {% include 'topbar.html' %}
     <h1>ยินดีต้อนรับสู่โลกของ Python</h1>
-    <p>ภาษาที่นักพัฒนา นักวิทยาศาสตร์ข้อมูล และวิศวกร AI ทั่วโลกเลือกใช้!
-        ไม่ว่าคุณจะเป็นมือใหม่ที่อยากเริ่มต้นเขียนโค้ด 
-        หรือนักพัฒนาที่ต้องการต่อยอดทักษะ Python คือกุญแจสู่โอกาสมากมาย 
-        ทั้งด้านเว็บแอปพลิเคชัน การวิเคราะห์ข้อมูล แมชชีนเลิร์นนิง และระบบอัตโนมัติ
+    <h2>Python คืออะไร?</h2>
+    <p>Python เป็นภาษาโปรแกรมมิงที่ได้รับความนิยมอย่างมาก มีรูปแบบโค้ดที่อ่านง่าย เรียนรู้ได้ไม่ยาก 
+        และมีความสามารถหลากหลาย ไม่ว่าจะเป็นงานเว็บ, การวิเคราะห์ข้อมูล, AI, หรือแม้แต่การเขียนโปรแกรมทั่วไป
     </p>
-    <p>
-        ทำไมต้อง Python? เพราะ Python เรียนรู้ง่าย โค้ดกระชับ และทรงพลัง! 
-        คุณสามารถสร้างทุกอย่างได้จากไม่กี่บรรทัดโค้ด 
-        ไม่ว่าจะเป็นเว็บไซต์ เกม โปรแกรมวิเคราะห์ข้อมูล หรือแม้แต่โมเดล AI ที่ซับซ้อน 
-        องค์กรระดับโลก เช่น Google, Facebook และ NASA ต่างใช้ Python เป็นเครื่องมือหลัก
-    </p>
-    <p>
-        เราออกแบบหลักสูตร ในระดับพื้นฐาน
-        พร้อมตัวอย่างและแบบฝึกหัดที่ช่วยให้คุณเรียนรู้ได้อย่างเป็นระบบ 
-        ต่อให้คุณจะไม่มีพื้นฐานเลย ที่นี่คุณจะได้สัมผัสกับการเรียนรู้ที่เข้าใจง่าย สนุก และสามารถนำไปใช้งานได้จริง
-    </p>
+     <h2> ทำไมควรเรียน Python?</h2>
+     <ul>
+        <li>ง่ายต่อการเรียนรู้และเข้าใจ</li>
+        <li>มีชุมชนผู้ใช้และผู้พัฒนาขนาดใหญ่</li>
+        <li>มีไลบรารีและเครื่องมือมากมาย</li>
+        <li>ใช้ได้กับหลากหลายแพลตฟอร์ม (Windows, macOS, Linux)</li>
+        <li>เป็นที่ต้องการในตลาดแรงงาน</li>
+    </ul>
+
+    <h2>การติดตั้ง Python</h2>
+    <h3>สำหรับ Windows</h3>
+    <ol>
+        <li>ไปที่เว็บไซต์ [python.org](<a href="https://www.python.org/downloads/"></a>)</li>
+    </ol>
     <p>
         อย่าปล่อยให้ Python เป็นเพียงแค่ชื่อที่คุณเคยได้ยิน! 
         มาร่วมเรียนรู้กับเราวันนี้ แล้วค้นพบว่าการเขียนโปรแกรมสามารถเปลี่ยนอนาคตของคุณได้ 
