--- a/templates/learn/python3.html
+++ b/templates/learn/python3.html
@@ -7,5 +7,27 @@
 </head>
 <body>
     {% include 'topbar.html' %}
+    <h1>โครงสร้างควบคุม</h1>
+    <h2>เงื่อนไข if-else</h2>
+    <p>โครงสร้างพื้นฐาน
+        if condition:
+            # ทำอะไรบางอย่าง
+        elif another_condition:
+            # ทำอย่างอื่น
+        else:
+            # ทำเมื่อไม่ตรงเงื่อนไขใดๆ</p>
+    <p>ตัวอย่าง:
+        ```python
+        age = 18
+        
+        if age < 13:
+            print("เด็ก")
+        elif age < 18:
+            print("วัยรุ่น")
+        else:
+            print("ผู้ใหญ่")
+        ```</p>
+    <h3>การเปรียบเทียบ</h3>
+    
 </body>
 </html>
