--- a/templates/home.html
+++ b/templates/home.html
@@ -39,12 +39,18 @@
     <ol>
         <li>...</li>
     </ol>
+    <h3>การตรวจสอบการติดตั้ง</h3>
+    <ul>
+        <p>เปิด Terminal หรือ Command Prompt แล้วพิมพ์
+            python --version หรือ python3 --version
+        </p>
+    </ul>
     <h2>สภาพแวดล้อมสำหรับการพัฒนา (IDE)</h2>
     <ul>
-        <li>**PyCharm**: IDE ที่มีความสามารถสูง</li>
-        <li>**Visual Studio Code**: Editor ที่เบาและมีประสิทธิภาพ</li>
-        <li>**Jupyter Notebook**: เหมาะสำหรับการวิเคราะห์ข้อมูลและการเรียนรู้</li>
-        <li>**IDLE**: มาพร้อมกับ Python ไม่ต้องติดตั้งเพิ่ม</li>
+        <li>PyCharm: IDE ที่มีความสามารถสูง</li>
+        <li>Visual Studio Code: Editor ที่เบาและมีประสิทธิภาพ</li>
+        <li>Jupyter Notebook: เหมาะสำหรับการวิเคราะห์ข้อมูลและการเรียนรู้</li>
+        <li>IDLE: มาพร้อมกับ Python ไม่ต้องติดตั้งเพิ่ม</li>
     </ul>
     <p>
         อย่าปล่อยให้ Python เป็นเพียงแค่ชื่อที่คุณเคยได้ยิน! 
